--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,36 @@ body{
 input {
     display: none;
 }
+
+#seleccionar_ataque {
+    flex-direction: column;
+    align-items: center;
+}
+
+.boton_de_ataque {
+    background-color: #114681;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    color: white;
+    border-color: transparent;
+    width: 100px;
+    font-family: "Cossette Titre", sans-serif;
+}
+
+#Mensajes {
+    width: 280px;
+    background: aquamarine;
+    padding: 20px;
+    border-radius: 20px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Cossette Titre", sans-serif;
+}
+
+#boton_reiniciar {
+    border: transparent;
+    color: #041562;
+}
