--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
     font-size: 20px;
 }
 
-.tarjetas {
+.tarjetas, .tarjetas-ataques {
     display: flex;
     gap: 10px;
 }
@@ -60,6 +60,10 @@ input {
     display: none;
 }
 
+input:checked + label {
+    background: rgb(35, 35, 170);
+}
+
 #seleccionar_ataque {
     flex-direction: column;
     align-items: center;
@@ -91,4 +95,27 @@ input {
 #boton_reiniciar {
     border: transparent;
     color: #041562;
+    font-family: "Cossette Titre", sans-serif;
+}
+
+.ataques {
+    display: grid;
+    grid-template-columns: 100px 100px;
+    color: white;
+}
+
+#vidas-jugador, #vidas-enemigo {
+    font-size: 32px;
+    margin-bottom: 0;
+}
+
+.ataques-jugador, .ataques-enemigo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@media (max-width: 360px) {
+    .tarjetas, .tarjetas-ataques{
+        flex-direction: column;
+    }
 }
