--- a/styles.css
+++ b/styles.css
@@ -74,9 +74,10 @@ input:checked + label {
     padding: 10px;
     box-sizing: border-box;
     border-radius: 20px;
+    border-color: tras;
     color: white;
     border-color: transparent;
-    width: 100px;
+    width: 80px;
     font-family: "Cossette Titre", sans-serif;
 }
 
@@ -114,6 +115,17 @@ input:checked + label {
     flex-direction: column;
     align-items: center;
 }
+
+#ver-mapa {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#mapa {
+    border: 2px solid white;
+}
+
 @media (max-width: 360px) {
     .tarjetas, .tarjetas-ataques{
         flex-direction: column;
