--- a/styles.css
+++ b/styles.css
@@ -122,12 +122,27 @@ input:checked + label {
     justify-content: center;
 }
 
-#mapa {
+#ver-mapa button {
+        font-family: "Cossette Titre", sans-serif;
+    width: 80px;
+    height: 40px;
+    border-radius: 20px;
+    background: transparent;
     border: 2px solid white;
+    color: white;
+    margin: 10px 0;
+}
+
+@media (max-width: 560px) {
+    .tarjetas, .tarjetas-ataques{
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 360px) {
-    .tarjetas, .tarjetas-ataques{
+    #ver-mapa div{
+        display: flex;
+        align-items: center;
         flex-direction: column;
     }
 }
